Spacing Fixed

--- a/src/Sass/components/_ContactForm.scss
+++ b/src/Sass/components/_ContactForm.scss
@@ -6,6 +6,7 @@
   min-height: 70vh;
   height: max-content;
   font-family: "poppins", sans-serif;
+  margin-bottom: 5rem;
 
   &__container {
     display: flex;
