--- a/src/Sass/components/_Customers.scss
+++ b/src/Sass/components/_Customers.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   height: 50vh;
+  margin: 10rem 0rem;
   //   border: 2px solid red;
 
   &__col {
